added the annotation for createTimeStamp and lastModifiedDate to contactEntity and UserEntity with the liquibase changelog for it

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,5 @@ databaseChangeLog:
       file: db/changelog/baseline-changelog.yml
   - include:
       file: db/changelog/db.changelog-contactType.yaml
+  - include:
+      file: db/changelog/db.changelog-createdDateLastModifiedDate.yaml
